--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
 	font-family: "Futura-main";
 	src: url("fonts/futura-pt-book.woff2") format("woff2"),
